editor/libeditor/HTMLTableEditor.cpp
@@ -3532,7 +3532,7 @@ HTMLEditor::GetFirstSelectedCellInTable(int32_t* aRowIndex,
   }
 
   // Also return the row and/or column if requested
-  CellIndexes cellIndexes(*firstSelectedCellElement, error);
+  CellIndexes cellIndexes(**aCell, error);
   if (NS_WARN_IF(error.Failed())) {
     return error.StealNSResult();
   }
